--- a/social_media/social/templates/home.html
+++ b/social_media/social/templates/home.html
@@ -3,8 +3,7 @@
 
 {% block body %}
 {% if user.is_authenticated %}
-<h1 style="text-align: center;margin-bottom:20px;">avalable category</h1>
-<h2 style="text-align: center;margin-bottom:20px;">please subscribe the category you want</h2>
+<h1 style="text-align: center;margin-bottom:20px;">avalable hello home</h1>
 {% else %}
 <div class="alert alert-danger d-flex align-items-center" role="alert">
     <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
