--- a/social_media/social/templates/base.html
+++ b/social_media/social/templates/base.html
@@ -20,7 +20,7 @@
   <div style="width: 100%; ">
     <nav class="navbar navbar-expand-lg navbar-light bg-light ">
         <div class="container-fluid ">
-          <a class="navbar-brand" href="#">ITI</a>
+          <a class="navbar-brand" href="{% url 'home' %}">ITI</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -29,9 +29,6 @@
               {% if user.is_authenticated %}
               <li>
                 <a class="nav-link nav-item btn btn-outline-dark me-2" aria-current="page" href="{% url 'logout' %}">logout</a>
-              </li>
-              <li>
-                <a class="nav-link nav-item btn btn-outline-dark me-2" aria-current="page" href="{% url 'home' %}">Home</a>
               </li>
               <li>
                 <a class="nav-link nav-item btn btn-outline-dark me-2" aria-current="page" href="{% url 'aboutus' %}">About us</a>
