--- a/social_media/members/templates/registration/register.html
+++ b/social_media/members/templates/registration/register.html
@@ -55,9 +55,11 @@
                             </div>
           
                             <div class="form-check d-flex justify-content-center mb-5">
-                              <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
+                              <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" required />
                               <label class="form-check-label" for="form2Example3">
                                 I agree all statements in <a href="#!">Terms of service</a>
+                                <p><i class="fa fa-sign-in"> aready have account
+                                   <a href="{% url 'login' %}">log in</a></i></p>
                               </label>
                             </div>
           
